--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Front-end do painel administrativo para o gerenciamento de migrantes e instituições",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "frontend",
@@ -24,6 +25,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.10",
     "pg": "^8.13.1",
     "sequelize": "^6.37.5"
   }
